fixed misalignment with project cards

--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ div#project-list {
 div.project-card {
   width: 100%;
   height: 100%;
-  margin: 20px;
+  /* margin: 20px; */
 }
 
 .project-img {
@@ -317,7 +317,10 @@ button:hover {
     grid-template-columns: 2fr 2fr;
     margin: 0;
     margin-top: 20px;
-    /* grid-template-columns: 2fr 2fr; */
+  }
+
+  #contact-form {
+    margin: 50px;
   }
 }
 
@@ -329,7 +332,6 @@ button:hover {
   div#about-section {
     padding-top: 120px;
     display: block;
-    /* margin: auto; */
   }
 
   #profile-pic {
@@ -342,13 +344,19 @@ button:hover {
     width: 60%;
   }
 
+  #projects {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   div#project-list {
     display: block;
     overflow-y: auto;
-    height: 50%;
+    height: 80vh;
     width: 100%;
     margin: auto;
-    /* grid-template-columns: 2fr 2fr; */
+    margin-top: 120px;
   }
 
   .project-card-wrap,
@@ -360,12 +368,13 @@ button:hover {
     padding-top: 120px;
     display: block;
     margin: auto;
+    width: 400px;
     height: 90%;
   }
 
   #connect-text {
     width: 80%;
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 80px;
   }
 }
